--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,7 @@ jobs:
       - name: Get result
         run: |
           pip install -r release_requirements.txt
+          echo $GITHUB_TOKEN
           python release.py
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
