--- a/.github/workflows/automatic_build.yml
+++ b/.github/workflows/automatic_build.yml
@@ -1,10 +1,8 @@
-on:
-  push:
-    # Sequence of patterns matched against refs/tags
-    branches:
-    - 'master'
+name: Automatic Build
 
-name: Release 
+on:
+  schedule:
+    - cron: '* * * * *' # every minute
 
 jobs:
   build:
@@ -20,6 +18,6 @@ jobs:
       - name: Release datasets
         run: |
           pip install -r release_requirements.txt
-          python release.py
+          python automatic_build.py
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
