--- a/.github/workflows/automatic_build.yml
+++ b/.github/workflows/automatic_build.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.6
-      - name: Release datasets
+      - name: Run build
         run: |
           pip install -r release_requirements.txt
           python automatic_build.py
