--- a/.github/workflows/automatic_build.yml
+++ b/.github/workflows/automatic_build.yml
@@ -1,10 +1,12 @@
+name: Automatic Build
+
 on:
   push:
-    # Sequence of patterns matched against refs/tags
     branches:
-    - 'master'
-
-name: Release 
+      - master
+      - GH-40
+  schedule:
+    - cron: '* * * * *' # every minute
 
 jobs:
   build:
@@ -17,9 +19,9 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.6
-      - name: Release datasets
+      - name: Run build
         run: |
           pip install -r release_requirements.txt
-          python release.py
+          python automatic_build.py
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
