--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
           python-version: 3.6
       - name: Release datasets
         run: |
-          pip install -r release_requirements.txt
+          pip install -r actions_requirements.txt
           python release.py
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
